--- a/indexPractico.html
+++ b/indexPractico.html
@@ -41,14 +41,14 @@
                 <p>Construyendo soluciones, descubriendo errores… y mi propio camino en la tecnología.</p>
                 <section id="contacto">
                     <div class="container text-center">
-                        <a href="https://github.com/Catyvaz">
-                            <img src="github.png" alt="GitHub" style="width:30px; height:auto;">
+                        <a class="redes_contacto" href="https://github.com/Catyvaz">
+                            <img src="github.png" alt="GitHub" style="width:32px; height:auto;">
                         </a>
-                        <a href="https://www.linkedin.com/in/caty-bustos-vazquez">
-                            <img src="logotipo-de-linkedin.png" alt="LinkedIn" style="width:30px; height:auto;">
+                        <a class="redes_contacto" href="https://www.linkedin.com/in/caty-bustos-vazquez">
+                            <img src="logotipo-de-linkedin.png" alt="LinkedIn" style="width:32px; height:auto;">
                         </a>
-                        <a href="tumail@gmail">
-                            <img src="logotipo-de-gmail.png" alt="Gmail" style="width:35px; height:auto;">
+                        <a class="redes_contacto" href="tumail@gmail">
+                            <img src="logotipo-de-gmail.png" alt="Gmail" style="width:37px; height:auto;">
                         </a>
                     </div>
                 </section>
@@ -69,6 +69,31 @@
                 Python, Selenium, bases de datos y herramientas como Git, Jira y Trello. Actualmente amplío mi formación
                 en automatización de pruebas y tecnologías web como JavaScript, TypeScript y HTML/CSS. Me apasiona
                 seguir aprendiendo y mejorando.</p>
+        </div>
+    </section>
+
+    <section id="tecnologias" class="py-5">
+        <h2 class="mb-4">Tecnologías</h2>
+        <div class="carousel-container">
+            <div class="carousel-track">
+                <img src="pythoned.png" alt="Python">
+                <img src="css-3.png" alt="CSS3">
+                <img src="html-5.png" alt="HTML5">
+                <img src="typescript.png" alt="TypeScript">
+                <img src="git.png" alt="Git">
+                <img src="github.png" alt="GitHub">
+                <img src="java.png" alt="Java">
+                <img src="mysql.png" alt="MySQL">
+
+                <img src="pythoned.png" alt="Python">
+                <img src="css-3.png" alt="CSS3">
+                <img src="html-5.png" alt="HTML5">
+                <img src="typescript.png" alt="TypeScript">
+                <img src="git.png" alt="Git">
+                <img src="github.png" alt="GitHub">
+                <img src="java.png" alt="Java">
+                <img src="mysql.png" alt="MySQL">
+            </div>
         </div>
     </section>
 
@@ -103,30 +128,7 @@
         </section>
 
     </div>
-    <section id="tecnologias" class="py-5">
-        <h2 class="mb-4">Tecnologías</h2>
-        <div class="carousel-container">
-            <div class="carousel-track">
-                <img src="pythoned.png" alt="Python">
-                <img src="css-3.png" alt="CSS3">
-                <img src="html-5.png" alt="HTML5">
-                <img src="typescript.png" alt="TypeScript">
-                <img src="git.png" alt="Git">
-                <img src="github.png" alt="GitHub">
-                <img src="java.png" alt="Java">
-                <img src="mysql.png" alt="MySQL">
-
-                <img src="pythoned.png" alt="Python">
-                <img src="css-3.png" alt="CSS3">
-                <img src="html-5.png" alt="HTML5">
-                <img src="typescript.png" alt="TypeScript">
-                <img src="git.png" alt="Git">
-                <img src="github.png" alt="GitHub">
-                <img src="java.png" alt="Java">
-                <img src="mysql.png" alt="MySQL">
-            </div>
-        </div>
-    </section>
+    
 
 
     <!-- Footer -->
