--- a/indexPractico.html
+++ b/indexPractico.html
@@ -33,7 +33,7 @@
     <header id="header" class="hero-header text-white text-center py-5">
         <div class="row" style="font-family: __Kumbh_Sans_e16533, __Kumbh_Sans_Fallback_e16533, sans-serif;">
             <div class="container_datos col-7">
-                <h1 class="display-4">Hola! Soy Caty</h1>
+                <h1 class="display-4">Hola!&#128075  Soy caty </h1>
                 <div class="texto_cambia">
                     <span>Desarrolladora</span>
                     <span>Tester QA</span>
@@ -41,14 +41,26 @@
                 <p>Construyendo soluciones, descubriendo errores… y mi propio camino en la tecnología.</p>
                 <section id="contacto">
                     <div class="container text-center">
+                        <a class="redes_contacto" href="catybusvaz2@gmail.com">
+                            <button id="email">
+                                <img src="logotipo-de-gmail.png" alt="logo gmail" style="width:25px; height:auto;">
+                                catybusvaz@gmail.com
+                            </button>
+                        </a>
+                        <a class="redes_contacto" href="curriculumnlanla">
+                            <button id="curriculum">
+                                <img src="resume.png" alt="curriculum" style="width:32px; height:auto;">
+                            </button>
+                        </a>
                         <a class="redes_contacto" href="https://github.com/Catyvaz">
-                            <img src="github.png" alt="GitHub" style="width:32px; height:auto;">
+                            <button id="github">
+                                <img src="github.png" alt="GitHub" style="width:32px; height:auto;">
+                            </button>
                         </a>
                         <a class="redes_contacto" href="https://www.linkedin.com/in/caty-bustos-vazquez">
-                            <img src="logotipo-de-linkedin.png" alt="LinkedIn" style="width:32px; height:auto;">
-                        </a>
-                        <a class="redes_contacto" href="tumail@gmail">
-                            <img src="logotipo-de-gmail.png" alt="Gmail" style="width:37px; height:auto;">
+                            <button id="github">
+                                <img src="logotipo-de-linkedin.png" alt="LinkedIn" style="width:32px; height:auto;">
+                            </button>
                         </a>
                     </div>
                 </section>
@@ -64,7 +76,7 @@
     <section id="sobre-mi" class="py-5 text-white">
         <div class="container_sobre_mi">
             <h2 class="text-center mb-4">Sobre mí</h2>
-            <p class="text-center">Soy Catherine Bustos Vazquez, estudiante en el último año de la tecnicatura en
+            <p class="text-start">Soy Catherine Bustos Vazquez, estudiante en el último año de la tecnicatura en
                 Desarrollo de Software. Me especializo en testing y desarrollo back-end, con conocimientos en Java,
                 Python, Selenium, bases de datos y herramientas como Git, Jira y Trello. Actualmente amplío mi formación
                 en automatización de pruebas y tecnologías web como JavaScript, TypeScript y HTML/CSS. Me apasiona
